@@ -167,6 +167,9 @@ set armelftests {
      {"jump19" "-static -T arm.ld" "" {jump19.s}
       {{objdump -dr jump19.d}}
       "jump19"}
+     {"EABI attribute merging" "-r" "" {attr-merge.s attr-merge.s}
+      {{readelf -A attr-merge.attr}}
+      "attr-merge"}
 }
 
 run_ld_link_tests $armelftests
